# fastapi-backend-template

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose-dev.yml  docker-compose.yml  docker-compose.yml.bak
.github/: dependabot.yml
.github/workflows/: ci.yml
src/: pyproject.toml  pytest_report.xml
src/app/: main.py
src/app/api/v1/: api.py
src/app/config/: logging.py
src/app/core/: config.py
src/test/unit/: test_example.py
